# Dead-Reckoning

./: .gitignore  README.md  SPEC.md  config.yaml  dead_reckoning.py  package-lock.json  package.json  pool_layout_qt_exportable_v3_separate_dae.py
.github/workflows/: release.yml
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/topdown/: manifest.json
app/server/: fsApi.ts
app/src/: api.ts  globals.d.ts  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/canvas/: PoolCanvas.tsx  scene.ts
app/src/core/: config.ts  defaultViz.json  math.ts  mesh.ts  model.ts  sidecar.ts
app/src/state/: store.ts
app/src/ui/: App.tsx  Inspector.tsx  ObjectsPanel.tsx  StatusBar.tsx  Toolbar.tsx  common.tsx  confirm.ts
app/tests/: config.test.ts  e2e.mjs  load.test.ts  math.test.ts  model.test.ts  shots.mjs  store.test.ts
app/tests/fixtures/: config.yaml
tools/: render_textures.py  render_topdowns.py
