[package]
name = "dead-reckoning"
version = "1.0.2"
description = "Top-down pool layout editor for the riptide_mapping config"
authors = ["OSU UWRT"]
edition = "2021"

[lib]
name = "dead_reckoning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
lto = true
